--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.hateoas.use-hal-as-default-json-media-type=true
 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 ##Use in case we want to turn migrations off
 #spring.liquibase.enabled=true
 
