--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,19 @@ spring.hateoas.use-hal-as-default-json-media-type=true
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
+# Quartz properties
+spring.quartz.job-store-type=jdbc
+
+# For production use need to consider another setting so we can survive restarts
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=20000
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+
+# Health check interval in milliseconds
+health.check.interval=60000
+
+
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 ##Use in case we want to turn migrations off
