--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,8 +39,8 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_PASS }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push
       uses: docker/build-push-action@v2
@@ -49,7 +49,6 @@ jobs:
         file: ./Dockerfile
         pull: true
         push: true
-        cache-from: type=registry,ref=mlars0n/cloudapplicationmanager-docker-action:latest
+        cache-from: type=registry,ref=mlars0n/cloudapplicationmanager:latest
         cache-to: type=inline
-        tags: mlars0n/cloudapplicationmanager-docker-action:latest
-        #build-args: PROFILE=nectar,ARG2=test
+        tags: cloudapplicationmanager:latest        
