--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,15 +32,18 @@ jobs:
           ~/.vaadin
           ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml', '**/package.json') }}
+
     - name: Build with Gradle
       run: ./gradlew clean build '-Pvaadin.productionMode' --stacktrace --info --no-daemon
-    - name: Build the Docker image      
+
+    - name: Build the Docker image
       run: docker build . --file Dockerfile --tag cloudapplicationmanager:$(date +%s)
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    #- name: Login to DockerHub
+    #  uses: docker/login-action@v1
+    #  with:
+    #      username: ${{ secrets.DOCKERHUB_USERNAME }}
+    #      password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     #- name: Build and push
     #  uses: docker/build-push-action@v2
