--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,8 @@ spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
 # Health check interval in milliseconds
 health.check.interval=30000
 
+# Vaadin 14 compatibilty
+vaadin.useDeprecatedV14Bootstrapping=true
 
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
